# labki-packs-tools

./: .gitignore  .markdownlint.json  .pdm-python  .yamllint.yml  README.md  manifest.yml  pdm_build.py  pyproject.toml
.github/workflows/: ci.yml  graph.yml  lint.yml  run-graph-dispatch.yml
docs/: ci.md  conventions.md  development.md  graph_tool.md  manifest.md  overview.md  usage.md  validator.md
examples/: manifest.yml
examples/pages/Categories/: Category_Meeting.wiki  Category_Publication.wiki
examples/pages/Forms/: Form_MeetingNotes.wiki  Form_Publication.wiki
examples/pages/Layouts/: Onboarding.md
examples/pages/Properties/: Property_Has author.wiki
examples/pages/Templates/: Template_MeetingNotes.wiki  Template_Publication.wiki
packs/lab-operations/: pack.yml
packs/lab-operations/equipment/: pack.yml
packs/lab-operations/pages/: general_policies.md  safety_overview.wiki
packs/lab-operations/training_pack/: pack.yml
packs/meeting_notes/: manifest.yml
packs/meeting_notes/pages/: Category_Meeting.wiki  Form_MeetingNotes.wiki  Template_MeetingNotes.wiki
packs/onboarding/: manifest.yml
packs/onboarding/pages/: Category_Onboarding.wiki  Form_Onboarding.wiki  Template_Onboarding.wiki
packs/publication/: manifest.yml
packs/publication/pages/: Category_Publication.wiki  Form_Publication.wiki  Property_Has author.wiki  Template_Publication.wiki
packs/tool-development/: pack.yml
packs/tool-development/acquisition_pack/: pack.yml
packs/tool-development/imaging/: pack.yml
packs/tool-development/pages/: readme.md
pages/Categories/: Category_Meeting.wiki  Category_Publication.wiki
pages/Forms/: Form_MeetingNotes.wiki  Form_Publication.wiki
pages/Layouts/: Onboarding.md
pages/Templates/: Template_MeetingNotes.wiki  Template_Publication.wiki
schema/: index.json  manifest.schema.json  pack.schema.json  root-manifest.schema.json
schema/v1/: manifest.schema.json
schema/v1_0_0/: manifest.schema.json
src/labki_packs_tools/: README.md  __init__.py  __main__.py  const.py  graph_repo.py  ingest.py  manifest.py  types.py  validate_repo.py
src/labki_packs_tools/cli/: graph.py  ingest.py  main.py  validate.py
src/labki_packs_tools/utils/: __init__.py  common.py
src/labki_packs_tools/validation/: __init__.py  cli.py  pack_validator.py  page_validator.py  repo_schema_resolver.py  repo_validator.py  result_formatter.py  result_types.py  schema_resolver.py  schema_validator.py
tests/: README.md  conftest.py  test_cli.py  test_const.py  test_graph_repo.py  test_ingest.py  test_manifest.py  test_manifest_schema_validator.py  test_manifest_schema_validator_integration.py  test_manifest_schema_validator_unit.py  test_pack_validator.py  test_packaging.py  test_page_validator.py  test_repo_validator.py  test_schema_auto_resolution.py  test_schema_resolution.py  test_schema_validator.py  test_validate_repo.py  utils.py
tools/: README.md  __init__.py  graph_repo.py  validate_repo.py
tools/utils/: __init__.py  common.py
(+48 files in other folders)
