[project]
name = "labki-packs-tools"
version = "0.1.0"
description = "Tools for validating and visualizing Labki content packs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.18",
]

[project.scripts]
labki-validate = "tools.validate_repo:main"
labki-graph = "tools.graph_repo:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true